# rust-prometheus

./: Cargo.toml  README.md
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  proto_model.proto  proto_model.rs
src/: atomic64.rs  counter.rs  desc.rs  gauge.rs  histogram.rs  lib.rs  macros.rs  metrics.rs  plain_model.rs  push.rs  registry.rs  text.rs  value.rs  vec.rs
src/encoder/: json.rs  mod.rs  pb.rs  text.rs
static-metric/tests/: metric.rs
