[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gen = []

[lib]
path = "src/lib.rs"

[dependencies]
protobuf = "3.0.3"

[build-dependencies]
protobuf = "3.0.3"
protobuf-codegen = "3.0.3"
